# docs/swagger.yaml
@@ -5,6 +5,69 @@ definitions:
       error:
         type: string
     type: object
+  models.Event:
+    properties:
+      availability:
+        type: integer
+      capacity:
+        type: integer
+      categoryId:
+        type: string
+      coverImage:
+        $ref: '#/definitions/models.Media'
+      createdAt:
+        type: string
+      createdBy:
+        type: string
+      currency:
+        type: string
+      destinationId:
+        type: string
+      durationHours:
+        type: integer
+      eventDate:
+        type: string
+      exclusions:
+        items:
+          type: string
+        type: array
+      fullDescription:
+        type: string
+      gallery:
+        items:
+          type: string
+        type: array
+      id:
+        type: string
+      inclusions:
+        items:
+          type: string
+        type: array
+      isFeatured:
+        type: boolean
+      reviews:
+        items:
+          type: string
+        type: array
+      schedule:
+        items:
+          type: string
+        type: array
+      shortDescription:
+        type: string
+      slug:
+        type: string
+      tags:
+        items:
+          type: string
+        type: array
+      ticketPrice:
+        type: number
+      title:
+        type: string
+      updatedAt:
+        type: string
+    type: object
   models.Media:
     properties:
       thumbnailUrl:
@@ -127,6 +190,143 @@ info:
   title: Tours Backend API
   version: "1.0"
 paths:
+  /admin/events:
+    get:
+      description: Retrieves a list of all events
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Event'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Get all events
+      tags:
+      - events
+    post:
+      consumes:
+      - multipart/form-data
+      description: Creates a new event
+      parameters:
+      - description: Event object
+        in: body
+        name: event
+        required: true
+        schema:
+          $ref: '#/definitions/models.Event'
+      - description: Cover image file
+        in: formData
+        name: coverImage
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Event'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Create a new event
+      tags:
+      - events
+  /admin/events/{id}:
+    delete:
+      description: Deletes an event by ID
+      parameters:
+      - description: Event ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Delete an event
+      tags:
+      - events
+    get:
+      description: Retrieves an event by its ID
+      parameters:
+      - description: Event ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Event'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Get event by ID
+      tags:
+      - events
+    put:
+      consumes:
+      - multipart/form-data
+      description: Updates an existing event by ID
+      parameters:
+      - description: Event ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Event object
+        in: body
+        name: event
+        required: true
+        schema:
+          $ref: '#/definitions/models.Event'
+      - description: Cover image file
+        in: formData
+        name: coverImage
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Event'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Update an event
+      tags:
+      - events
   /admin/tours:
     get:
       description: Retrieves a list of all tours
